# esp32cam

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
src/: bindings.h  camera.rs  main.rs  test.rs
src/network/: http.rs  mod.rs  wifi.rs
