[package]
name = "esp32cam"
version = "0.1.0"
authors = ["kyrosle <le@90e.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp-idf-svc/experimental", "embedded-svc/experimental"]
# default = ["esp-idf-svc/experimental"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc = { version = "0.45.0" }
esp-idf-hal = "0.40.1"
embedded-svc = { version = "0.24.0" }
anyhow = "1"
log = "0.4"
base64 = "0.21.0"


[build-dependencies]
embuild = "0.31.1"
anyhow = "1"

[package.metadata.esp-idf-sys]
extra_components = [
  { component_dirs = [
    "component",
  ], bindings_header = "src/bindings.h" },
]
